Prevent elastic scroll on Safari

--- a/src/style.styl
+++ b/src/style.styl
@@ -18,6 +18,11 @@
 	--footer-padding-bottom calc(var(--nav-margin-vert) + env(safe-area-inset-bottom))
 	--font-small 'monaco', serif
 
+html, body
+	overflow hidden
+	width 100%
+	height 100%
+
 html
 	font-weight bold
 	font-family serif
